--- a/examples/native-clock/package.json
+++ b/examples/native-clock/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "expo": "^32.0.0",
+    "moment": "^2.22.2",
     "react": "^16.8.0-alpha.1",
     "react-easy-state": "^6.1.0-beta.7",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
