--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,11 @@ jobs:
       - checkout
       - run: npm install
       - run: npm run lint
-      - run: npm test
+      # test the final bundled builds
       - run: npm run build
       - run: npm run test-builds
+      # test with older react versions
+      - run: npm i react@15 react-dom@15 --no-save
+      # run the tests on the original source to get coverage info
+      - run: npm test
       - run: npm run coveralls
