--- a/package.json
+++ b/package.json
@@ -56,40 +56,40 @@
     "react": "*"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "@babel/plugin-transform-async-to-generator": "^7.4.4",
-    "@babel/plugin-transform-modules-commonjs": "^7.4.4",
-    "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "@types/react": "^16.8.18",
-    "babel-eslint": "^10.0.1",
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-export-default-from": "^7.8.3",
+    "@babel/plugin-transform-async-to-generator": "^7.8.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.8.3",
+    "@babel/polyfill": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
+    "@testing-library/jest-dom": "^5.1.1",
+    "@testing-library/react": "^9.4.0",
+    "@types/react": "^16.9.19",
+    "babel-eslint": "^10.0.3",
     "classnames": "2.2.6",
-    "coveralls": "^3.0.3",
-    "jest": "^24.8.0",
-    "jest-dom": "^3.2.2",
+    "coveralls": "^3.0.9",
+    "jest": "^25.1.0",
     "markdown-toc": "^1.2.0",
     "moment": "2.24.0",
-    "nyc": "^14.1.1",
+    "nyc": "^15.0.0",
     "pre-push": "0.1.1",
-    "prettier": "^1.17.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-native": "^0.59.8",
-    "react-native-testing-library": "^1.7.0",
-    "react-router-dom": "^5.0.0",
-    "react-test-renderer": "^16.8.6",
-    "react-testing-library": "^7.0.1",
-    "rollup": "^1.12.3",
+    "prettier": "^1.19.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-native": "^0.61.5",
+    "react-native-testing-library": "^1.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-test-renderer": "^16.12.0",
+    "rollup": "^1.31.0",
     "rollup-plugin-auto-external": "^2.0.0",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-node-resolve": "^5.0.0",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
-    "sinon": "^7.3.2",
-    "standard": "^12.0.1",
-    "styled-components": "^4.2.0"
+    "sinon": "^8.1.1",
+    "standard": "^14.3.1",
+    "styled-components": "^5.0.1"
   },
   "engines": {
     "node": ">=6.0.0"
